Add delegate protocols to observation Text field
Tapping the text field raises the screen when the onscreen
keyboard appears. Pressing return clears the keyboard and lowers
the screen. Still a little buggy though.

--- a/KeaWatch/KeaWatch/Base.lproj/Main.storyboard
+++ b/KeaWatch/KeaWatch/Base.lproj/Main.storyboard
@@ -251,7 +251,7 @@
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UEQ-Eq-lrt">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="311.5"/>
                                     </imageView>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="testData" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CqO-S0-wNS">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Give a little description about what you saw" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CqO-S0-wNS">
                                         <rect key="frame" x="0.0" y="311.5" width="343" height="311.5"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
